--- a/Dockerfile-spark
+++ b/Dockerfile-spark
@@ -1,13 +1,13 @@
-FROM armadik/livy:dev
+FROM lreimus/livy:3.3.4-0.8-1
 
 USER root
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
         python-dev \
         python3-pip && \
-    rm -rf /var/lib/apt/lists/* \
+        rm -rf /var/lib/apt/lists/* 
 
 ADD spark-entrypoint.sh /entrypoint.sh
 RUN chmod a+x /entrypoint.sh
 
-USER default
+#USER default
 ENTRYPOINT ["/entrypoint.sh"]
